--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -383,6 +383,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77d7dc38",
+   "metadata": {},
+   "source": [
+    "## Use a pytorch compatible IndexedDataset class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a6c0000",
+   "metadata": {},
+   "source": [
+    "If you need to train your model on a list of files, you can use a `ln.Dataset.indexed()` with the pytorch `Dataloader`. It doesn't load anything into memory and thus allows to work with very large `AnnData` files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d705b49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataloader, WeightedRandomSampler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6de5e38b",
+   "metadata": {},
+   "source": [
+    "Create a Dataset for training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41fa1730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_train1 = ln.File(data_train1, name=\"Conde22_train\")\n",
+    "file_train1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c44fd0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_train2 = ln.File(data_train2, name=\"pbmc10x_train\")\n",
+    "file_train2.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ee1fc7",
+   "metadata": {},
+   "source": [
+    "Files in the dataset should have the same variables, we have already taken care of this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fcb178b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_train = ln.Dataset([file_train1, file_train2], name=\"Dataset for training\")\n",
+    "dataset_train.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42c0fcf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = dataset_train(labels=[\"cell_type\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e46ee80",
+   "metadata": {},
+   "source": [
+    "This is compatible with pytorch `Dataloader` because it implements `__getitem__` over a list of `AnnData` files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bacad8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3954ece9",
+   "metadata": {},
+   "source": [
+    "`labels` are encoded into integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72a0a9ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.encoders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cef13ba8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# label_key for weight doesn't have to be in labels on init\n",
+    "sampler = WeightedRandomSampler(\n",
+    "    weights=ds.get_labels_weights(\"cell_type\"), num_samples=len(ds)\n",
+    ")\n",
+    "dl = Dataloader(ds, batch_size=128, sampler=sampler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26015540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for batch in dl:\n",
+    "    pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "74753e31",
@@ -411,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.17"
   },
   "nbproject": {
    "id": "Qr1kIHvK506r",
