--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -464,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = dataset_train(labels=[\"cell_type\"])"
+    "ds = dataset_train.indexed(labels=[\"cell_type\"])"
    ]
   },
   {
