--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -395,7 +395,7 @@
    "id": "7a6c0000",
    "metadata": {},
    "source": [
-    "If you need to train your model on a list of files, you can use a `ln.Dataset.indexed()` with the pytorch `Dataloader`. It doesn't load anything into memory and thus allows to work with very large `AnnData` files."
+    "If you need to train your model on a list of files, you can use a `ln.Dataset.indexed()` with the pytorch `DataLoader`. It doesn't load anything into memory and thus allows to work with very large `AnnData` files."
    ]
   },
   {
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataloader, WeightedRandomSampler"
+    "from torch.utils.data import DataLoader, WeightedRandomSampler"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "id": "4e46ee80",
    "metadata": {},
    "source": [
-    "This is compatible with pytorch `Dataloader` because it implements `__getitem__` over a list of `AnnData` files."
+    "This is compatible with pytorch `DataLoader` because it implements `__getitem__` over a list of `AnnData` files."
    ]
   },
   {
@@ -514,7 +514,7 @@
     "sampler = WeightedRandomSampler(\n",
     "    weights=ds.get_labels_weights(\"cell_type\"), num_samples=len(ds)\n",
     ")\n",
-    "dl = Dataloader(ds, batch_size=128, sampler=sampler)"
+    "dl = DataLoader(ds, batch_size=128, sampler=sampler)"
    ]
   },
   {
