fix file creation

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_train1 = ln.File(data_train1, name=\"Conde22_train\")\n",
+    "file_train1 = ln.File(data_train1, description=\"Conde22_train\")\n",
     "file_train1.save()"
    ]
   },
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_train2 = ln.File(data_train2, name=\"pbmc10x_train\")\n",
+    "file_train2 = ln.File(data_train2, description=\"pbmc10x_train\")\n",
     "file_train2.save()"
    ]
   },
