--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -15,7 +15,7 @@
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Iteratively train an ML model on a dataset"
+    "# Train an ML model on a dataset"
    ]
   },
   {
@@ -55,7 +55,15 @@
    "id": "fe511a4d",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87a94c1a",
+   "metadata": {},
+   "source": [
+    "Let us get our dataset:"
    ]
   },
   {
@@ -66,90 +74,7 @@
    "outputs": [],
    "source": [
     "dataset_v2 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()\n",
-    "\n",
     "dataset_v2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "285a537f",
-   "metadata": {},
-   "source": [
-    "We import [scvi-tools](https://github.com/scverse/scvi-tools)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6aa24cd7",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import scvi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cd564b74",
-   "metadata": {},
-   "source": [
-    "Similar to what we did in the [previous tutorial](scrna3), we could load the entire dataset into memory and train a model in 4 lines of code.\n",
-    "\n",
-    ":::{dropdown} How would this look like?\n",
-    "\n",
-    "```\n",
-    "data_train = dataset_v2.load(join=\"inner\")\n",
-    "scvi.model.SCVI.setup_anndata(data_train)\n",
-    "vae = scvi.model.SCVI(data_train)\n",
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI\n",
-    "```\n",
-    "\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0a61ac1",
-   "metadata": {},
-   "source": [
-    "Let us instead load all file records:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "addaa4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1, file2 = dataset_v2.files.list()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "500dd0d2",
-   "metadata": {},
-   "source": [
-    "We'd like some context on what the first file contains and where it's from:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02fb951e",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file1.describe()\n",
-    "file1.view_flow()"
    ]
   },
   {
@@ -159,7 +84,9 @@
    "source": [
     "We'll need to make a decision on the features that we want to use for training the model.\n",
     "\n",
-    "Because each file is validated, they're all indexed by `ensembl_gene_id` in the `var` slot of AnnData."
+    "Because each file is validated, they're all indexed by `ensembl_gene_id` in the `var` slot of AnnData.\n",
+    "\n",
+    "To make our live easy, we'll intersect features across files:"
    ]
   },
   {
@@ -169,49 +96,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shared_genes = file1.features[\"var\"] & file2.features[\"var\"]\n",
+    "files = dataset_v2.files.all()\n",
+    "shared_genes = files[0].features[\n",
+    "    \"var\"\n",
+    "]  # the gene sets are stored in the \"var\" slot of features\n",
+    "for file in files[1:]:\n",
+    "    shared_genes = (\n",
+    "        shared_genes & file.features[\"var\"]\n",
+    "    )  # QuerySet objects allow set operations\n",
     "shared_genes_ensembl = shared_genes.list(\"ensembl_gene_id\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "07ba43a7",
+   "id": "34b9b0ee",
    "metadata": {},
    "source": [
-    "## Train the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3634185",
-   "metadata": {},
-   "source": [
-    "Let us load the first file into memory:"
+    "We'll now store the raw representations and create a training dataset:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecdfac83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train1 = file1.load().raw[:, shared_genes_ensembl].to_adata()\n",
-    "data_train1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1bfef8a2",
-   "metadata": {},
-   "source": [
-    "Train the model on this first file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ec5a6cf",
+   "id": "bddbdc55",
    "metadata": {
     "tags": [
      "hide-output"
@@ -219,167 +126,15 @@
    },
    "outputs": [],
    "source": [
-    "scvi.model.SCVI.setup_anndata(data_train1)\n",
-    "vae = scvi.model.SCVI(data_train1)\n",
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to run it on CI\n",
-    "vae.save(\"saved_models/scvi1\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d42318ec",
-   "metadata": {},
-   "source": [
-    "Load the second file and resume training the model:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aba80e62",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "data_train2 = file2.load().raw[:, shared_genes_ensembl].to_adata()\n",
-    "vae = scvi.model.SCVI.load(\"saved_models/scvi1\", data_train2)\n",
-    "vae.train(max_epochs=1)\n",
-    "vae.save(\"saved_models/scvi1\", overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43770f7a",
-   "metadata": {},
-   "source": [
-    "## Save the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccfdc59a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights = ln.File(\"saved_models/scvi1/model.pt\", description=\"My trained model\")\n",
-    "weights.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "296c67a4",
-   "metadata": {},
-   "source": [
-    "## Save latent representation as a new dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f482b26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latent1 = vae.get_latent_representation(data_train1)\n",
-    "latent2 = vae.get_latent_representation(data_train2)\n",
+    "raw_files = []\n",
+    "for file in files:\n",
+    "    adata_raw = file.load().raw[:, shared_genes_ensembl].to_adata()\n",
+    "    raw_file = ln.File(adata_raw, description=f\"Raw data of file {file.uid}\")\n",
+    "    raw_files.append(raw_file)\n",
     "\n",
-    "adata_latent1 = ad.AnnData(X=latent1, obs=data_train1.obs)\n",
-    "adata_latent2 = ad.AnnData(X=latent2, obs=data_train2.obs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7da5328",
-   "metadata": {},
-   "source": [
-    "Because the latent representation is low-dimensional, we can typically fit very high number of observations into memory.\n",
-    "\n",
-    "Hence, let's store it as a concatenated adata."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54f55922",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_latent = ad.concat([adata_latent1, adata_latent2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01fd5a49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2_latent = ln.Dataset(\n",
-    "    adata_latent,\n",
-    "    name=\"Latent representation of scRNA-seq dataset v2\",\n",
-    "    description=\"For the original data, see dataset T5x0SkRJNviE0jYGbJKt\",\n",
-    ")\n",
-    "dataset_v2_latent.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5794f1cc",
-   "metadata": {},
-   "source": [
-    "Let us look at the data flow:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0364f1ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2_latent.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8688bf0d",
-   "metadata": {},
-   "source": [
-    "Compare this with the model:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e01f713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e814c919",
-   "metadata": {},
-   "source": [
-    "Annotate with labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9414d24f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2_latent.labels.add_from(dataset_v2)\n",
-    "\n",
-    "dataset_v2_latent.describe()"
+    "ds_train = ln.Dataset(raw_files, name=\"My training dataset\", version=\"2\")\n",
+    "ds_train.save()\n",
+    "ds_train.view_flow()"
    ]
   },
   {
@@ -387,7 +142,7 @@
    "id": "77d7dc38",
    "metadata": {},
    "source": [
-    "## Use a pytorch compatible IndexedDataset class"
+    "## Create a pytorch DataLoader"
    ]
   },
   {
@@ -395,7 +150,9 @@
    "id": "7a6c0000",
    "metadata": {},
    "source": [
-    "If you need to train your model on a list of files, you can use a `ln.Dataset.indexed()` with the pytorch `DataLoader`. It doesn't load anything into memory and thus allows to work with very large `AnnData` files."
+    "If you need to train your model on a list of files, you can use `ln.Dataset.indexed()` with the pytorch `DataLoader`.\n",
+    "\n",
+    "It doesn't load anything into memory and thus allows to work with very large datasets."
    ]
   },
   {
@@ -410,36 +167,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de5e38b",
-   "metadata": {},
-   "source": [
-    "Create a Dataset for training."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41fa1730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_train1 = ln.File(data_train1, description=\"Conde22_train\")\n",
-    "file_train1.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c44fd0ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_train2 = ln.File(data_train2, description=\"pbmc10x_train\")\n",
-    "file_train2.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "86ee1fc7",
    "metadata": {},
    "source": [
@@ -449,22 +176,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fcb178b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_train = ln.Dataset([file_train1, file_train2], name=\"Dataset for training\")\n",
-    "dataset_train.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "42c0fcf0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = dataset_train.indexed(labels=[\"cell_type\"])"
+    "ds_mapped = ds_train.indexed(labels=[\"cell_type\"])"
    ]
   },
   {
@@ -482,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds[5]"
+    "ds_mapped[5]"
    ]
   },
   {
@@ -490,7 +206,7 @@
    "id": "3954ece9",
    "metadata": {},
    "source": [
-    "`labels` are encoded into integers."
+    "The `labels` are encoded into integers."
    ]
   },
   {
@@ -500,7 +216,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.encoders"
+    "ds_mapped.encoders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5321512",
+   "metadata": {},
+   "source": [
+    "Let us use a weighted sampler:"
    ]
   },
   {
@@ -512,9 +236,9 @@
    "source": [
     "# label_key for weight doesn't have to be in labels on init\n",
     "sampler = WeightedRandomSampler(\n",
-    "    weights=ds.get_labels_weights(\"cell_type\"), num_samples=len(ds)\n",
+    "    weights=ds_mapped.get_labels_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
     ")\n",
-    "dl = DataLoader(ds, batch_size=128, sampler=sampler)"
+    "dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)"
    ]
   },
   {
