📝 Fix and adopt

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -97,13 +97,11 @@
    "outputs": [],
    "source": [
     "files = dataset_v2.files.all()\n",
-    "shared_genes = files[0].features[\n",
-    "    \"var\"\n",
-    "]  # the gene sets are stored in the \"var\" slot of features\n",
+    "# the gene sets are stored in the \"var\" slot of features\n",
+    "shared_genes = files[0].features[\"var\"]\n",
     "for file in files[1:]:\n",
-    "    shared_genes = (\n",
-    "        shared_genes & file.features[\"var\"]\n",
-    "    )  # QuerySet objects allow set operations\n",
+    "    # QuerySet objects allow set operations\n",
+    "    shared_genes = shared_genes & file.features[\"var\"]\n",
     "shared_genes_ensembl = shared_genes.list(\"ensembl_gene_id\")"
    ]
   },
@@ -131,6 +129,7 @@
     "    adata_raw = file.load().raw[:, shared_genes_ensembl].to_adata()\n",
     "    raw_file = ln.File(adata_raw, description=f\"Raw data of file {file.uid}\")\n",
     "    raw_files.append(raw_file)\n",
+    "ln.save(raw_files)\n",
     "\n",
     "ds_train = ln.Dataset(raw_files, name=\"My training dataset\", version=\"2\")\n",
     "ds_train.save()\n",
@@ -180,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_mapped = ds_train.indexed(labels=[\"cell_type\"])"
+    "ds_mapped = ds_train.mapped(label_keys=[\"cell_type\"])"
    ]
   },
   {
@@ -236,7 +235,7 @@
    "source": [
     "# label_key for weight doesn't have to be in labels on init\n",
     "sampler = WeightedRandomSampler(\n",
-    "    weights=ds_mapped.get_labels_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
+    "    weights=ds_mapped.get_label_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
     ")\n",
     "dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)"
    ]
