--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -194,7 +194,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2bacad8a",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ds_mapped[5]"
@@ -212,7 +216,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "72a0a9ae",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ds_mapped.encoders"
@@ -241,6 +249,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "181fe57e",
+   "metadata": {},
+   "source": [
+    "We can now iterate through the data loader:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "26015540",
@@ -255,7 +271,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74753e31",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# clean up test instance\n",
