:memo: indexed to mapped in markdown

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -149,7 +149,7 @@
    "id": "7a6c0000",
    "metadata": {},
    "source": [
-    "If you need to train your model on a list of files, you can use `ln.Dataset.indexed()` with the pytorch `DataLoader`.\n",
+    "If you need to train your model on a list of files, you can use `ln.Dataset.mapped()` with the pytorch `DataLoader`.\n",
     "\n",
     "It doesn't load anything into memory and thus allows to work with very large datasets."
    ]
