--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Along the way, you'll see how to create reports, leverage data lineage, and query individual data batches stored as files.\n",
     "\n",
-    "If you're only interested in _using_ a large curated scRNA-seq dataset, see the [CELLxGENE Census guide](docs:cellxgene-census).\n",
+    "If you're only interested in _using_ a large curated scRNA-seq dataset, see the [CELLxGENE Census guide](docs:cellxgene).\n",
     "\n",
     "Here, you will:\n",
     "\n",
@@ -272,7 +272,7 @@
     "\n",
     "```{note}\n",
     "\n",
-    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](docs:cellxgene-census) for an instance with ~1k h5ads and ~50 million cells.\n",
+    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](docs:cellxgene) for an instance with ~1k h5ads and ~50 million cells.\n",
     "\n",
     "```"
    ]
