--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "This requires duplicating the data that's present in a collection of `.h5ad` files, but provides the advantage that one can now query slices for arbitrary metadata, rather than just the individual files.\n",
     "\n",
-    "See how this looks for `cellxgene-census` here: {doc}`docs:cellxgene-census`."
+    "See how this looks for `cellxgene` here: {doc}`docs:cellxgene`."
    ]
   }
  ],
