--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -268,6 +268,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11ea391d",
+   "metadata": {},
+   "source": [
+    "Close the connections in `mapped`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b507f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_mapped.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c955a7b7",
+   "metadata": {},
+   "source": [
+    "It is also possible to use `mapped` as a context manager:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15836194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with ds_train.mapped(label_keys=[\"cell_type\"]) as ds_mapped:\n",
+    "    sampler = WeightedRandomSampler(\n",
+    "        weights=ds_mapped.get_label_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
+    "    )\n",
+    "    dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)\n",
+    "    for batch in dl:\n",
+    "        pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "74753e31",
