✨ Enabled ID conversion via return_field

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -116,12 +116,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lb.Gene.validate(adata.var.index, lb.Gene.symbol);"
+    "This dataset is indexed by gene symbols, let's validate them:"
    ]
   },
   {
@@ -137,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Standardize symbols and register additional symbols from Bionty:"
+    "Let's first standardize the gene symbols from synonyms:"
    ]
   },
   {
@@ -146,9 +144,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.var.index = lb.Gene.standardize(adata.var.index, lb.Gene.symbol)\n",
-    "gene_records = lb.Gene.from_values(adata.var.index, lb.Gene.symbol)\n",
-    "ln.save(gene_records)"
+    "adata.var.index = lb.Gene.standardize(adata.var.index, lb.Gene.symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validated = lb.Gene.validate(adata.var.index, lb.Gene.symbol)"
    ]
   },
   {
@@ -166,7 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.Gene.validate(adata.var.index, lb.Gene.symbol)\n",
     "adata_validated = adata[:, validated].copy()"
    ]
   },
@@ -174,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also subset raw of the anndata object to the validated genes"
+    "Now all the symbols are standardized, let's convert them to Ensembl IDs:"
    ]
   },
   {
@@ -183,26 +187,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_validated.raw = adata.raw[:, validated].to_adata()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we need to convert gene symbols into ensembl gene ids:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "records = lb.Gene.filter(id__in=[record.id for record in gene_records])\n",
-    "mapper = pd.DataFrame(records.values_list(\"symbol\", \"ensembl_gene_id\")).set_index(0)[1]\n",
-    "adata_validated.var.insert(0, \"gene_symbol\", adata_validated.var.index)\n",
-    "adata_validated.var.rename(index=mapper, inplace=True)"
+    "adata_validated.var[\"ensembl_gene_id\"] = lb.Gene.standardize(\n",
+    "    adata_validated.var.index,\n",
+    "    field=lb.Gene.symbol,\n",
+    "    return_field=lb.Gene.ensembl_gene_id,\n",
+    ")\n",
+    "\n",
+    "# Use Ensembl IDs as our index instead of gene symbols\n",
+    "adata_validated.var.index.name = \"symbol\"\n",
+    "adata_validated.var = adata_validated.var.reset_index().set_index(\"ensembl_gene_id\")"
    ]
   },
   {
@@ -218,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Raw has the same genes, so set them also."
+    "We also subset raw of the anndata object to the validated genes"
    ]
   },
   {
@@ -227,6 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "adata_validated.raw = adata.raw[:, validated].to_adata()\n",
+    "# Raw has the same genes, so set them also.\n",
     "adata_validated.raw.var.index = adata_validated.var.index"
    ]
   },
