--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -119,16 +119,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset is indexed by gene symbols, let's validate them:"
+    "This dataset is indexed by gene symbols:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "lb.Gene.inspect(adata.var.index, lb.Gene.symbol);"
+    "lb.Gene.inspect(adata.var.index, lb.Gene.symbol)"
    ]
   },
   {
@@ -144,15 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.var.index = lb.Gene.standardize(adata.var.index, lb.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata.var.index = lb.Gene.standardize(adata.var.index, lb.Gene.symbol)\n",
     "validated = lb.Gene.validate(adata.var.index, lb.Gene.symbol)"
    ]
   },
@@ -160,9 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We only want to register data with validated genes: data related to other features wouldn't be useful to us, anyway.\n",
-    "\n",
-    "Hence, we subset the `AnnData` object to the validated genes:"
+    "We only want to register data with validated genes:"
    ]
   },
   {
@@ -178,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now all the symbols are standardized, let's convert them to Ensembl IDs:"
+    "Now that all symbols are validated, let's convert them to Ensembl ids via {meth}`~docs:lamindb.dev.CanValidate.standardize`:"
    ]
   },
   {
@@ -192,18 +186,8 @@
     "    field=lb.Gene.symbol,\n",
     "    return_field=lb.Gene.ensembl_gene_id,\n",
     ")\n",
-    "\n",
-    "# Use Ensembl IDs as our index instead of gene symbols\n",
     "adata_validated.var.index.name = \"symbol\"\n",
-    "adata_validated.var = adata_validated.var.reset_index().set_index(\"ensembl_gene_id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata_validated.var = adata_validated.var.reset_index().set_index(\"ensembl_gene_id\")\n",
     "adata_validated.var.head()"
    ]
   },
@@ -211,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also subset raw of the anndata object to the validated genes"
+    "Here, we'll use `.raw`:"
    ]
   },
   {
@@ -221,7 +205,6 @@
    "outputs": [],
    "source": [
     "adata_validated.raw = adata.raw[:, validated].to_adata()\n",
-    "# Raw has the same genes, so set them also.\n",
     "adata_validated.raw.var.index = adata_validated.var.index"
    ]
   },
