--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -49,40 +49,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Access ![](https://img.shields.io/badge/Access-10b981)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Let's now consider a dataset with less-well curated features:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata = ln.dev.datasets.anndata_pbmc68k_reduced()\n",
     "adata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We see that this dataset is indexed by gene symbols. Because we assume that in-house, we index all datasets by Ensembl IDs, we'll need to re-curate:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.var.head()"
    ]
   },
   {
@@ -105,21 +86,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Curate & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Curate & validate genes"
+    "This data batch is indexed by gene symbols which we'll want to map on Ensemble ids:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "adata.var.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset is indexed by gene symbols:"
+    "Let's inspect the identifiers:"
    ]
   },
   {
@@ -172,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all symbols are validated, let's convert them to Ensembl ids via {meth}`~docs:lamindb.dev.CanValidate.standardize`:"
+    "Now that all symbols are validated, let's convert them to Ensembl ids via {meth}`~docs:lamindb.dev.CanValidate.standardize`. Not that this is a non-ambiguous mapping and the first match is kept because the `keep` arg of `.standardize()` defaults to `\"first\"`:"
    ]
   },
   {
@@ -212,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Curate & validate cell types"
+    "### Curate & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
