--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new batch of data"
+    "# Standardize and append a batch of data"
    ]
   },
   {
@@ -33,7 +33,6 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
     "\n",
     "ln.track()"
    ]
@@ -42,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize a less-well curated dataset"
+    "## Standardize a data batch"
    ]
   },
   {
@@ -86,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curate & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Standardize & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -166,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all symbols are validated, let's convert them to Ensembl ids via {meth}`~docs:lamindb.dev.CanValidate.standardize`. Not that this is a non-ambiguous mapping and the first match is kept because the `keep` arg of `.standardize()` defaults to `\"first\"`:"
+    "Now that all symbols are validated, let's convert them to Ensembl ids via {meth}`~docs:lamindb.dev.CanValidate.standardize`. Note that this is an ambiguous mapping and the first match is kept because the `keep` arg of `.standardize()` defaults to `\"first\"`:"
    ]
   },
   {
@@ -206,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curate & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Standardize & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -241,17 +240,14 @@
     "bionty = lb.CellType.bionty()  # access the public ontology through bionty\n",
     "name_mapper = {}\n",
     "for name in adata_validated.obs.cell_type.unique():\n",
-    "    ontology_id = (\n",
-    "        bionty.search(name).iloc[0].ontology_id\n",
-    "    )  # search the public ontology and use the ontology id of the top match\n",
-    "    record = lb.CellType.from_bionty(\n",
-    "        ontology_id=ontology_id\n",
-    "    )  # create a record by loading the top match from bionty\n",
+    "    # search the public ontology and use the ontology id of the top match\n",
+    "    ontology_id = bionty.search(name).iloc[0].ontology_id\n",
+    "    # create a record by loading the top match from bionty\n",
+    "    record = lb.CellType.from_bionty(ontology_id=ontology_id)\n",
     "    name_mapper[name] = record.name  # map the original name to standardized name\n",
     "    record.save()  # save the record\n",
-    "    record.add_synonym(\n",
-    "        name\n",
-    "    )  # add the original name as a synonym, so that next time, we can just run .standardize()"
+    "    # add the original name as a synonym, so that next time, we can just run .standardize()\n",
+    "    record.add_synonym(name)"
    ]
   },
   {
@@ -384,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Append a file to the growing dataset"
+    "## Append the batch to the dataset"
    ]
   },
   {
@@ -407,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new version of the dataset by sharding it across the new file `file` and the file underlying version 1 of the dataset:"
+    "Create a new version of the dataset by sharding it across the new `file` and the file underlying version 1 of the dataset:"
    ]
   },
   {
