--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -34,6 +34,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
+    "ln.settings.verbosity = \"hint\"\n",
     "ln.track()"
    ]
   },
@@ -171,7 +172,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata_validated.var[\"ensembl_gene_id\"] = lb.Gene.standardize(\n",
@@ -218,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "inspector = lb.CellType.inspect(adata_validated.obs.cell_type)"
@@ -228,13 +237,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us search the cell type names from the public ontology, and add the name value found in the `AnnData` object as a synonym to the top match found in the public ontology."
+    "Let us search the cell type names from the public ontology, and add the name found in the `AnnData` object as a synonym to the top match found in the public ontology."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "bionty = lb.CellType.bionty()  # access the public ontology through bionty\n",
@@ -321,7 +334,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
@@ -335,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we do not want to manage the remaining unvalidated terms in registries, we can save the file."
+    "As we do not want to manage the remaining unvalidated terms in registries, we can save and annotate the file:"
    ]
   },
   {
@@ -344,26 +361,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "file.save()\n",
     "file.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
     "file.labels.add(organism.human, feature=features.organism)\n",
-    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)\n",
     "file.describe()"
    ]
   },
@@ -409,7 +410,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "dataset_v2 = ln.Dataset(\n",
@@ -417,8 +422,6 @@
     "    is_new_version_of=dataset_v1,\n",
     ")\n",
     "dataset_v2.save()\n",
-    "\n",
-    "# annotate the dataset\n",
     "dataset_v2.labels.add_from(file)\n",
     "dataset_v2.labels.add_from(dataset_v1)"
    ]
