--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=Nv48yAceNSh8z8)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fscrna.ipynb)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=Nv48yAceNSh8z8)"
    ]
   },
   {
@@ -21,16 +20,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll learn how to manage a growing number of scRNA-seq data batches as a single queryable dataset.\n",
+    "You'll learn how to manage a growing number of scRNA-seq data shards as a single queryable dataset.\n",
     "\n",
-    "Along the way, you'll see how to create reports, leverage data lineage, and query individual data batches stored as files.\n",
+    "Along the way, you'll see how to create reports, leverage data lineage, and query individual data shards stored as files.\n",
     "\n",
     "If you're only interested in _using_ a large curated scRNA-seq dataset, see the [CELLxGENE Census guide](docs:cellxgene).\n",
     "\n",
     "Here, you will:\n",
     "\n",
     "1. read a single `.h5ad` file as an `AnnData` object and seed a growing dataset with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
-    "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
+    "2. append a new data shard (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
     "3. query & inspect files by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
     "4. load the dataset into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
     "5. iterate over the dataset, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
