--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardize and append a batch of data"
+    "# Standardize and append a shard of data"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "Here, we'll learn \n",
     "- how to standardize a less well curated dataset\n",
-    "- how to append it as a new batch of data to the growing versioned dataset"
+    "- how to append it as a new shard of data to the growing versioned dataset"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize a data batch"
+    "## Standardize a data shard"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data batch is indexed by gene symbols which we'll want to map on Ensemble ids:"
+    "This data shard is indexed by gene symbols which we'll want to map on Ensemble ids:"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Append the batch to the dataset"
+    "## Append the shard to the dataset"
    ]
   },
   {
