--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -141,7 +141,7 @@
    "id": "77d7dc38",
    "metadata": {},
    "source": [
-    "## Create a pytorch DataLoader"
+    "## PyTorch DataLoader"
    ]
   },
   {
@@ -149,9 +149,9 @@
    "id": "7a6c0000",
    "metadata": {},
    "source": [
-    "If you need to train your model on a list of files, you can use `ln.Dataset.mapped()` with the pytorch `DataLoader`.\n",
+    "If you need to train your model on a list of files, you can use {meth}`~lamindb.Dataset.mapped` with the PyTorch `DataLoader`.\n",
     "\n",
-    "It doesn't load anything into memory and thus allows to work with very large datasets."
+    "It only loads batches into memory and thus allows to work with very large datasets."
    ]
   },
   {
@@ -272,7 +272,7 @@
    "id": "11ea391d",
    "metadata": {},
    "source": [
-    "Close the connections in `mapped`."
+    "Close the connections in `MappedDataset`:"
    ]
   },
   {
@@ -290,23 +290,18 @@
    "id": "c955a7b7",
    "metadata": {},
    "source": [
-    "It is also possible to use `mapped` as a context manager:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15836194",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ":::{dropdown} In practice, use a context manager\n",
+    "\n",
+    "```\n",
     "with ds_train.mapped(label_keys=[\"cell_type\"]) as ds_mapped:\n",
     "    sampler = WeightedRandomSampler(\n",
     "        weights=ds_mapped.get_label_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
     "    )\n",
     "    dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)\n",
     "    for batch in dl:\n",
-    "        pass"
+    "        pass\n",
+    "```\n",
+    ":::"
    ]
   },
   {
