--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -106,6 +106,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e348b32",
+   "metadata": {},
+   "source": [
+    "Make a `MappedDataset` object out of `ln.Dataset`. It also does virtual inner join of the variables of the underlying `AnnData` objects."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "42c0fcf0",
