--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -125,6 +125,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "684fdb1c",
+   "metadata": {},
+   "source": [
+    "The intersected variable names can be accessed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "354f955c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(ds_mapped.var_joint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e46ee80",
    "metadata": {},
    "source": [
